--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 	<canvas></canvas>
 	<script src="/canvas.js"></script>
-	<div class="startMenuWrapper">
-		<div class="startMenu" id="startMenu">
-			<input type="text" name="name" placeholder="Enter your name here"></input>
+	<div class="startMenu" id="startMenu">
+		<div class="startMenuContent">
+			<input id="nameInput" type="text" name="name" placeholder="Enter your name here"></input>
 			<button id="startButton"> Play </button>
-			<p> Grow your black hole, without being sucked into others' </p>
+			<p> Grow your black hole, don't get sucked into others. </p>
 		</div>
 	</div>
 </body>
@@ -21,12 +21,12 @@
 <script>
 	let btn = document.getElementById('startButton');
 
-	btn.onclick = startGame;
+	btn.onclick = startGame; 
 	function startGame() {
+		var val = document.getElementById('nameInput').value;
+		console.log('Player started as ' + val);
 		document.getElementById('startMenu').style.maxHeight = 0;
-		console.log('button press');
 		socket.emit('start');
-		console.log(socket);
 	}
 	
 	
