--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
 	let btn = document.getElementById('startButton');
 	let chatFeed = document.getElementById('chatFeed');
 	let chatInput = document.getElementById('chatInput');
+	let nameInput = document.getElementById('nameInput');
 	let inSession = false;
 
 	btn.onclick = startGame; 
 	function startGame() {
-		var val = document.getElementById('nameInput').value;
+		var val = nameInput.value;
 		console.log('Player started as ' + val);
 		document.getElementById('startMenu').style.maxHeight = 0;
 		socket.emit('start', val);
 		inSession = true;
+		nameInput.blur();
 	}
 
 	// Chat handling
@@ -44,8 +46,12 @@
 		if (event.key == 'Enter') {
 			if (document.activeElement === chatInput)
 				submitMsg();
-			else
+			else if (document.activeElement === nameInput)
+				startGame();
+			else if (inSession)
 				chatInput.focus();
+			else 
+				nameInput.focus();
 		}
 		if (event.key == 'Escape')
 			document.activeElement.blur();
@@ -63,6 +69,7 @@
 		var t = document.createTextNode(name + ': ' + msg);
 		x.appendChild(t);
 		chatFeed.appendChild(x);
+		chatFeed.scrollTo(0, chatFeed.scrollHeight);
 	});
 	
 	
