Change chat feed to unordered list and leaderboard to ordered list

--- a/index.html
+++ b/index.html
@@ -16,23 +16,21 @@
 	</div>
 
 	<div id="chatBox">
-		<div id="chatFeed"></div>
+		<ul id="chatFeed"></ul>
 		<input id="chatInput" placeholder="Press enter to type, escape to close.">
 	</div>
 	
 	<div id="leaderBoard">
-		<ul id="leaderList">
+		<ol id="leaderList">
 			<li></li>
 			<li></li>
 			<li></li>
 			<li></li>
 			<li></li>
-		</ul>
+		</ol>
 	</div>
 
 	<canvas></canvas>
-	
-	
 </body>
 </html>
 <script src="/canvas.js"></script>
