Refactor canvas code into an object

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</ol>
 	</div>
 
-	<canvas></canvas>
+	<canvas id="cvs" tabindex="-1"></canvas>
 </body>
 </html>
 <script src="/canvas.js"></script>
