Update main menu instructions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<input id="nameInput" type="text" name="name" placeholder="Enter your name here">
 			<button id="startButton"> Play </button>
 			<p> Grow your black hole, don't get sucked into others. You are spawned with an associated blackhole that you are tethered to. Bump other particles into your black hole, bump your black hole into other particles, but don't bump into enemy black holes.</p>
-			<p> How to play: Use the arrow keys to move. Escape and Enter open and close the chatbox respectively. Refresh page to respawn.</p>
+			<p> How to play: Use the arrow keys to move. Escape and Enter open and close the chatbox respectively.</p>
 		</div>
 	</div>
 
