--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+
 	<title>Collisions</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script src="/socket.io/socket.io.js"></script>
