--- a/web-client/static/index.html
+++ b/web-client/static/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="startMenu" id="startMenu">
 		<div class="startMenuContent">
-			<input id="nameInput" type="text" name="name" placeholder="Enter your name here">
+			<input id="nameInput" type="text" name="name" placeholder="Enter your name here" maxlength="16">
 			<button id="startButton"> Play </button>
 			<p> Grow your black hole, don't get sucked into others. You are spawned with an associated blackhole that you are tethered to. Bump other particles into your black hole, bump your black hole into other particles, but don't bump into enemy black holes.</p>
 			<p> How to play: Use the arrow keys to move. Escape and Enter open and close the chatbox respectively.</p>
